5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4154/executions/1836_2603.log
== TEST (2019-06-27 07:04:25) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
b = zeros(4)
for i in range(4):
	print(a[:,i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:07:23) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
b = zeros(4)
for i in range(4):
	b[i] = (sorted(a[:,i], reverse=True))
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:07:56) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
b = zeros(4)
for i in range(4):
	b[i] = (sorted(a[:,i], reverse=True))
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:13:00) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
b = []
for i in range(4):
	b.append(sorted(a[:,i], reverse=True))
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 07:13:44) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
b = []
for i in range(4):
	b.append(sorted(a[:,i], reverse=True))
print(b)
-- EXECUTION TIME:
1.28493
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4, 3, 2, 1], [4, 3, 2, 1], [4, 3, 2, 1], [4, 3, 2, 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4, 3, 2, 1], [4, 3, 2, 1], [4, 3, 2, 1], [3, 3, 3, 3]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:13:52) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
b = []
for i in range(4):
	b.append(sorted(a[:,i], reverse=True))
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:14:26) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
b = []
for i in range(4):
	b.append(sorted(a[:,i], reverse=True))
print(b.T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:17:43) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
b = array([])
for i in range(4):
	b.append(sorted(a[:,i], reverse=True))
print(b.T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:19:51) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
b = array([])
for i in range(4):
	b.insert(sorted(a[:,i], reverse=True))
print(b.T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:22:20) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
b = zeros(4)
for i in range(4):
	b[i] =(sorted(a[:,i], reverse=True)
print(b.T)
-- ERROR:
File "XXXX", line 7
    print(b.T)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 07:23:35) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
a = a.T
b = zeros(4)
for i in range(4):
	b[i] =(sorted(a[:,i], reverse=True)
print(b)
-- EXECUTION TIME:
0.728868
-- ERROR:
  File "/home/codebench/codes/1836/2603/main.py", line 8
    print(b)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:23:38) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
a = a.T
b = zeros(4)
for i in range(4):
	b[i] =(sorted(a[:,i], reverse=True)
print(b)
-- ERROR:
File "XXXX", line 8
    print(b)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:24:05) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
a = a.T
b = zeros(4)
for i in range(4):
	b[i] =(sorted(a[:,i], reverse=True)
print(b)
-- ERROR:
File "XXXX", line 8
    print(b)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:24:05) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
a = a.T
b = zeros(4)
for i in range(4):
	b[i] =(sorted(a[:,i], reverse=True)
print(b)
-- ERROR:
File "XXXX", line 8
    print(b)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:24:06) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
a = a.T
b = zeros(4)
for i in range(4):
	b[i] =(sorted(a[:,i], reverse=True)
print(b)
-- ERROR:
File "XXXX", line 8
    print(b)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:24:30) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
a = a.T
b = zeros(4)
for i in range(4):
	b[i] = (sorted(a[:,i], reverse=True)
print(b)
-- ERROR:
File "XXXX", line 8
    print(b)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:24:59) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
a = a.T
b = zeros(4)
for i in range(4):
	b[i] = (sorted(a[:,i], reverse=True)
print(b)
-- ERROR:
File "XXXX", line 8
    print(b)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:25:11) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
a = a.T
b = zeros(4)
for i in range(4):
	b[i] = (sorted(a[:,i], reverse=True)
b
-- ERROR:
File "XXXX", line 8
    b
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:25:22) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
a = a.T
b = zeros(4)
for i in range(4):
	b[i] = (sorted(a[:,i], reverse=True)
-- ERROR:
File "XXXX", line 8
    
                                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:26:46) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
a = a.T
b = array([])
for i in range(4):
	b = (sorted(a[:,i], reverse=True)
-- ERROR:
File "XXXX", line 8
    
                                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:26:55) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
a = a.T
b = array([])
for i in range(4):
	b[] = (sorted(a[:,i], reverse=True)
-- ERROR:
File "XXXX", line 7
    b[] = (sorted(a[:,i], reverse=True)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:27:23) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
a = a.T
b = array([])
for i in range(4):
	b = sorted(a[:,i], reverse=True)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:27:48) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
a = a.T
b = zeros(4)
for i in range(4):
	b[i] = sorted(a[:,i], reverse=True)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:33:37) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
a = a.T
b = zeros(4)
c = array([])
for i in range(4):
	c = sorted(a[:,i], reverse=True)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:38:57) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
a = a.T
prinT(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:39:19) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
a = a.T
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:41:37) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
a = a.T
b = array([array([]),array([]),array([]),array([])])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:49:51) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
a = a.T
b = array([array([]),array([]),array([]),array([])])
for i in range(4):
	a[i] = sorted(a[i], reverse=True)
print(a.T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 07:50:18) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
a = a.T
b = array([array([]),array([]),array([]),array([])])
for i in range(4):
	a[i] = sorted(a[i], reverse=True)
print(a.T)
-- EXECUTION TIME:
1.08401
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:50:40) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
a = a.T
for i in range(4):
	a[i] = sorted(a[i], reverse=True)
print(a.T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 07:50:45) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
a = a.T
for i in range(4):
	a[i] = sorted(a[i], reverse=True)
print(a.T)
-- EXECUTION TIME:
1.0842
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:20:45) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
a = a
for i in range(4):
	a[:,i] = sorted(a[:,i], reverse=True)
print(a.T)
-- EXECUTION TIME:
1.14217
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 3 2 1]
 [4 3 2 1]
 [4 3 2 1]
 [4 3 2 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 3 2 1]
 [4 3 2 1]
 [4 3 2 1]
 [3 3 3 3]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:20:50) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
a = a
for i in range(4):
	a[:,i] = sorted(a[:,i], reverse=True)
print(a)
-- EXECUTION TIME:
1.04345
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
